style: fix text overflow so it stays within the block style: fix text overflow so it stays within the block

--- a/project/src/Components/Users/User/_user.module.scss
+++ b/project/src/Components/Users/User/_user.module.scss
@@ -9,30 +9,20 @@
   max-width: 370px;
   border-radius: 10px;
   padding: 20px;
-
-  & .name,
-  & .jobTitle {
-    @extend %noWrapText;
-    text-align: center;
-  }
 }
 
 .userInfo {
+  @extend %flexCenter;
+  flex-direction: column;
   width: 100%;
   min-width: 0;
-  text-align: center;
-
-  & a {
-    background-color: transparent;
-  }
 }
 
-.email {
-  display: block;
-  max-width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+.email,
+.name,
+.jobTitle {
+  @extend %textEllipsis;
+  text-align: center;
 }
 
 .userPhoto {
